--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
 }
 
 * {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -78,7 +78,7 @@ header .icons .fa-search {
 }
 
 /* video info */
-.info {
+.infoAndupNext .info {
   padding: var(--spacing);
 }
 
@@ -118,7 +118,7 @@ header .icons .fa-search {
   transform: rotate(180deg);
 }
 
-.info .views {
+.info .metadata .views {
   font-size: var(--font-small);
   color: var(--grey-dark-color);
 }
@@ -134,6 +134,7 @@ header .icons .fa-search {
   display: flex;
   flex-direction: column;
   color: var(--grey-dark-color);
+  font-size: var(--font-small);
 }
 
 .info .actions button i {
@@ -146,47 +147,43 @@ header .icons .fa-search {
   color: var(--blue-color);
 }
 
-.info .actions button span {
-  font-size: var(--font-small);
-}
-
 /* channel */
 
-.channel {
+.info .channel {
   display: flex;
   justify-content: space-between;
   border-top: 1px solid var(--grey-light-color);
   border-bottom: 1px solid var(--grey-light-color);
 }
 
-.channel .metadata {
+.info .channel .metadata {
   display: flex;
   align-items: center;
   padding: var(--spacing-small) 0;
 }
 
-.channel img {
+.info .channel .metadata img {
   width: var(--avatar-size);
   height: var(--avatar-size);
   border-radius: 50%;
   margin-right: var(--spacing);
 }
 
-.channel .info {
+.info .channel .metadata .info {
   display: flex;
   flex-direction: column;
 }
 
-.channel .info .name {
+.info .channel .metadata .info .name {
   font-size: var(--font-medium);
 }
 
-.channel .info .subscribers {
+.info .channel .metadata .info .subscribers {
   font-size: var(--font-small);
   color: var(--grey-dark-color);
 }
 
-.channel .subscribe {
+.info .channel .subscribe {
   text-transform: uppercase;
   color: var(--red-color);
   font-size: var(--font-medium);
@@ -197,6 +194,7 @@ header .icons .fa-search {
 .upNext {
   padding: 0 var(--spacing);
 }
+
 .upNext > .title {
   color: var(--grey-dark-color);
   font-size: var(--font-medium);
@@ -219,23 +217,26 @@ header .icons .fa-search {
 
 .upNext .item .itemInfo {
   flex-basis: 60%;
+}
+
+.upNext .item .moreBtn {
+  flex-basis: 5%;
+  height: 100%;
+}
+
+.upNext .item .itemInfo {
   display: flex;
   flex-direction: column;
 }
 
 .upNext .item .itemInfo .title {
-  font-size: var(--font-medium);
+  font-size: var(--font-small);
 }
 
 .upNext .item .itemInfo .name,
 .upNext .item .itemInfo .views {
   font-size: var(--font-micro);
   color: var(--grey-dark-color);
-}
-
-.upNext .item .moreBtn {
-  flex-basis: 5%;
-  height: 100%;
 }
 
 .infoAndupNext {
